

syntax="proto3";

option java_multiple_files = true;
option java_package = "cn.atali.curd.FileTemplate";
option java_outer_classname = "FileTemplateProto";
option objc_class_prefix = "FileTemplateSRV";

package curd;
option go_package = "./;curd";

import "curd_common.proto";

service FileTemplate{
    rpc Add(FileTemplateInfo)returns(CommonResponse){}
    rpc Update(FileTemplateInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryFileTemplateRequest)returns(QueryFileTemplateResponse){}
    rpc GetAll(GetAllRequest)returns(GetAllFileTemplateResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetFileTemplateDetailResponse){}
    rpc Copy(GetDetailRequest)returns(CommonResponse){}
}

message FileTemplateInfo {
    string id=1;
	//文件模版名称 
 	string name=2;
	//文件存放的目录 
 	string dir=3;
	//包名 
 	string package=4;
	//开头模板ID 
 	string start=5;
	//结尾模板ID 
 	string end=6;
	//一组模板ID 
    repeated string body=7;
	//自定义参数 
 	string params=8;
    //编程语言
    string language=9;
    //分组
    string group=10;
    //文件名称后缀
    string fileNameSuffix=11;
}

message QueryFileTemplateRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//文件名称 
    // @inject_tag: uri:"name" form:"name"
    string name=4;
    // @inject_tag: uri:"language" form:"language"
    string language=5;
    // @inject_tag: uri:"group" form:"group"
    string group=6;
    // @inject_tag: uri:"dir" form:"dir"
    string dir=7;
}

message QueryFileTemplateResponse{
    Code code=1;
    string message=2;
    repeated FileTemplateInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllFileTemplateResponse{
    Code code=1;
    string message=2;
    repeated FileTemplateInfo data=3;
}

message GetFileTemplateDetailResponse{
    Code code=1;
    string message=2;
    FileTemplateInfo data=3;
}

message GenFileTemplateCodeResponse{
    Code code=1;
    string message=2;
    GenFileTemplateCodeInfo data=3;
}

message GenFileTemplateCodeInfo{
    string template=1;
    string code=2;
}